--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.16.1"
+bevy = "0.17.1"
+rand = "0.9.2"
+
+[target.'cfg(unix)'.dependencies]
+wayland-sys = {version = "0.31", features = ["dlopen"]}
